--- a/Game.csproj
+++ b/Game.csproj
@@ -158,15 +158,20 @@
     <Compile Include="Engine\Skills\BasicWeaponMoves\AxeCut.cs" />
     <Compile Include="Engine\Skills\BasicWeaponMoves\SpearStab.cs" />
     <Compile Include="Engine\Skills\BasicWeaponMoves\SwordSlash.cs" />
-    <Compile Include="Engine\Skills\PowerAttackAxe.cs" />
-    <Compile Include="Engine\Skills\PowerAttackAxeDecorator.cs" />
+    <Compile Include="Engine\Skills\MySkills\PowerAttackAxe.cs" />
+    <Compile Include="Engine\Skills\MySkills\PowerAttackAxeDecorator.cs" />
+    <Compile Include="Engine\Skills\MySkills\PrecisionSwordAttack.cs" />
+    <Compile Include="Engine\Skills\MySkills\PrecisionSwordAttackDecorator.cs" />
     <Compile Include="Engine\Skills\Skill.cs" />
     <Compile Include="Engine\Skills\SkillDecorator.cs" />
     <Compile Include="Engine\Skills\SkillFactories\BasicSpellFactory.cs" />
     <Compile Include="Engine\Skills\BasicSpells\WindGust.cs" />
     <Compile Include="Engine\Skills\BasicSpells\WindGustDecorator.cs" />
     <Compile Include="Engine\Skills\SkillFactories\BasicWeaponMoveFactory.cs" />
+    <Compile Include="Engine\Skills\SkillFactories\MySkillsFactory.cs" />
     <Compile Include="Engine\Skills\SkillFactories\SkillFactory.cs" />
+    <Compile Include="Engine\Skills\MySkills\StaffBash.cs" />
+    <Compile Include="Engine\Skills\MySkills\StaffBashDecorator.cs" />
     <Compile Include="Engine\StatPackage.cs" />
     <Compile Include="Engine\Subject.cs" />
     <Compile Include="MainWindow.xaml.cs">
